--- a/contentlayer-example/package.json
+++ b/contentlayer-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-portfolio",
+  "name": "contentlayer-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "20.1.0",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
     "contentlayer": "^0.3.2",
-    "data-fns": "^1.1.0",
     "date-fns": "^2.30.0",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "framer-motion": "^10.12.4",
-    "gray-matter": "^4.0.3",
-    "next": "13.3.0",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "next": "13.4.1",
     "next-contentlayer": "^0.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
-  },
-  "devDependencies": {
-    "@types/react": "18.2.0"
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
