--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -18,11 +18,11 @@
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "gray-matter": "^4.0.3",
-    "next": "13.3.0",
+    "next": "^13.4.1",
     "next-contentlayer": "^0.3.2",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
